--- a/compose.yaml
+++ b/compose.yaml
@@ -18,29 +18,12 @@ services:
       mysql:
         aliases:
           - mysql
-  caddy:
-    image: caddy:latest
-    container_name: caddy
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-      - "443:443/udp" # HTTP/3 is UDP
-    volumes:
-      - ./caddy/Caddyfile:/etc/caddy/Caddyfile
-      - ./caddy/data:/data
-      - ./caddy/config:/config
-    networks:
-      ruuvi-api:
-    environment:
-      SERVER_DOMAIN: ${SERVER_DOMAIN}
   ruuvi-api:
-    build: ../ruuvi-api
+    build: .
     container_name: ruuvi-api
     restart: always
-    # API is open for Caddy
-    expose:
-     - 8080
+    ports:
+     - 8080:8080
     environment:
       DB_HOST: mysql
       DB_USER: ${MYSQL_USER}
@@ -49,12 +32,6 @@ services:
       SERVER_PORT: 8080
     networks:
       mysql:
-        aliases:
-          - ruuvi-api
-      ruuvi-api:
-        aliases:
-          - ruuvi-api
 
 networks:
   mysql:
-  ruuvi-api:
