--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   mysql:
-    image: mysql:9.2
+    image: mysql:8.4
     restart: always
     expose:
       - 3306
@@ -13,11 +13,14 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-
     networks:
       mysql:
         aliases:
           - mysql
+
+    volumes:
+      - db:/var/lib/mysql
+      - ./schema.mysql.sql:/docker-entrypoint-initdb.d/schema.mysql.sql
   ruuvi-api:
     build: .
     container_name: ruuvi-api
@@ -35,3 +38,6 @@ services:
 
 networks:
   mysql:
+
+volumes:
+  db:
