--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ruuvi-mankelings",
-  "version": "1.0.0",
-  "description": "App that gets data from Ruuvi forwarder and saves it.",
+  "name": "ruuvi-api",
+  "version": "0.1.4",
+  "description": "App that gets data from Ruuvi gateway and saves it to an SQL database.",
   "main": "index.ts",
   "scripts": {
     "start": "node index.ts --experimental-transform-types",
